[gd_scene load_steps=7 format=3 uid="uid://c8y6tgx2xr3vq"]

[ext_resource type="Script" path="res://src/scripts/enemy.gd" id="1_yjk2p"]
[ext_resource type="SpriteFrames" path="res://src/assets/sprites/enemies/enemy_spritesheet.tres" id="2_m4n3r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
extents = Vector2(12, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 400.0

[sub_resource type="Animation" id="Animation_3"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id="Animation_4"]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_yjk2p")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource("2_m4n3r")
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_2")

[node name="ShootPosition" type="Marker2D" parent="."]
position = Vector2(-20, 0)

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
animations/attack = SubResource("Animation_3")
animations/die = SubResource("Animation_4")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = null
autoplay = false
</file_content>
</output>
</tool_result>